tests/error/poly_errors_py312/free_var_in_bound1.py
from guppylang.decorator import guppy

T = guppy.type_var("T", copyable=True, droppable=True)


@guppy
def main[x: T]() -> None:
    ...


guppy.compile(main)
