tests/error/poly_errors_py312/free_var_in_bound1.err
Error: Free type variable (at $FILE:7:12)
  | 
5 | 
6 | @guppy
7 | def main[x: T]() -> None:
  |             ^ Type variable `T` is unbound

Note: Only struct and function definitions can be generic. Other generic values
or nested types are not supported.

Guppy compilation failed due to 1 previous error
